--- a/file-bindy-ftp/pom.xml
+++ b/file-bindy-ftp/pom.xml
@@ -28,13 +28,13 @@
     <description>Camel Quarkus Example :: File Bindy FTP</description>
 
     <properties>
-        <quarkus.platform.version>2.3.0.Final</quarkus.platform.version>
-        <camel-quarkus.platform.version>2.4.0-SNAPSHOT</camel-quarkus.platform.version>
+        <quarkus.platform.version>2.4.1.Final</quarkus.platform.version>
+        <camel-quarkus.platform.version>${quarkus.platform.version}</camel-quarkus.platform.version>
 
-        <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
+        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
-        <camel-quarkus.platform.group-id>org.apache.camel.quarkus</camel-quarkus.platform.group-id>
-        <camel-quarkus.platform.artifact-id>camel-quarkus-bom</camel-quarkus.platform.artifact-id>
+        <camel-quarkus.platform.group-id>${quarkus.platform.group-id}</camel-quarkus.platform.group-id>
+        <camel-quarkus.platform.artifact-id>quarkus-camel-bom</camel-quarkus.platform.artifact-id>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -287,7 +287,7 @@
 
                                 Pattern pattern = Pattern.compile("app.kubernetes.io/version: .*")
 
-                                ["kubernetes", "openshift"].each { k8sResource ->
+                                ["kubernetes", "openshift"].each { k8sResource -&gt;
                                     File file = new File("${project.basedir}/src/main/kubernetes/${k8sResource}.yml")
                                     String content = file.text
                                     Matcher matcher = pattern.matcher(content)
