--- a/observability/src/main/resources/application.properties
+++ b/observability/src/main/resources/application.properties
@@ -26,6 +26,9 @@ quarkus.jaeger.sampler-type = const
 quarkus.jaeger.sampler-param = 1
 quarkus.jaeger.endpoint = http://localhost:14268/api/traces
 
+# Allow metrics to be exported as JSON. Not strictly required and is disabled by default
+quarkus.micrometer.export.json.enabled = true
+
 #
 # Camel
 #
