--- a/timer-log/pom.xml
+++ b/timer-log/pom.xml
@@ -22,7 +22,7 @@
 
     <artifactId>camel-quarkus-examples-timer-log</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>2.7.0-SNAPSHOT</version>
+    <version>2.7.0</version>
 
     <name>Camel Quarkus :: Examples :: Timer Log</name>
     <description>Camel Quarkus Example :: Timer to Log</description>
