--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -93,7 +93,7 @@ jobs:
           fi
       - name: Build Camel Quarkus Examples
         run: |
-          ./mvnw-for-each.sh ${MAVEN_ARGS} clean install -DskipTests -Dquarkus.build.skip -Dimpsort.skip -Dformatter.skip
+          ./mvnw-for-each.sh ${MAVEN_ARGS} clean install -DskipTests -Dquarkus.build.skip
       - name: Fail if there are uncommitted changes
         shell: bash
         run: |
@@ -147,10 +147,44 @@ jobs:
             fi
 
             ./mvnw ${MAVEN_ARGS} clean verify \
-              -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
+              -Dformatter.skip -Dimpsort.skip \
               -Pnative,docker \
               -f "${EXAMPLE}/pom.xml"
           done
+      - name: Fail if there are uncommitted changes
+        shell: bash
+        run: |
+          [[ -z $(git status --porcelain) ]] || { echo 'There are uncommitted changes'; git status; exit 1; }
+
+  integration-tests-alternative-platform:
+    name: Integration Tests Alternative Platform - ${{matrix.os}}
+    needs: initial-mvn-install
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ['windows-latest']
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+      - name: Download Maven Repo
+        uses: actions/download-artifact@v2
+        with:
+          name: maven-repo
+          path: ..
+      - name: Extract Maven Repo
+        shell: bash
+        run: |
+          tar -xzf ../maven-repo.tgz -C ~
+      - name: Integration Tests
+        shell: bash
+        run: |
+          ./mvnw-for-each.sh ${MAVEN_ARGS} -Dskip-testcontainers-tests clean verify 
       - name: Fail if there are uncommitted changes
         shell: bash
         run: |
