--- a/file-bindy-ftp/pom.xml
+++ b/file-bindy-ftp/pom.xml
@@ -43,7 +43,7 @@
         <maven.compiler.testTarget>${maven.compiler.target}</maven.compiler.testTarget>
         <maven.compiler.testSource>${maven.compiler.source}</maven.compiler.testSource>
 
-        <formatter-maven-plugin.version>2.11.0</formatter-maven-plugin.version>
+        <formatter-maven-plugin.version>2.17.1</formatter-maven-plugin.version>
         <groovy-maven-plugin.version>2.1.1</groovy-maven-plugin.version>
         <impsort-maven-plugin.version>1.3.2</impsort-maven-plugin.version>
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
@@ -132,6 +132,11 @@
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.codehaus.gmaven</groupId>
+                    <artifactId>groovy-maven-plugin</artifactId>                
+                    <version>${groovy-maven-plugin.version}</version>
+                </plugin>
 
                 <plugin>
                     <groupId>net.revelc.code.formatter</groupId>
@@ -139,6 +144,7 @@
                     <version>${formatter-maven-plugin.version}</version>
                     <configuration>
                         <configFile>${maven.multiModuleProjectDirectory}/eclipse-formatter-config.xml</configFile>
+                        <lineEnding>LF</lineEnding>
                     </configuration>
                 </plugin>
 
@@ -288,7 +294,8 @@
                                 Pattern pattern = Pattern.compile("app.kubernetes.io/version: .*")
 
                                 ["kubernetes", "openshift"].each { k8sResource -&gt;
-                                    File file = new File("${project.basedir}/src/main/kubernetes/${k8sResource}.yml")
+                                    String sanitizedBasedir = project.basedir.path.replace('\\', '/')
+                                    File file = new File("${sanitizedBasedir}/src/main/kubernetes/${k8sResource}.yml")
                                     String content = file.text
                                     Matcher matcher = pattern.matcher(content)
 
@@ -368,6 +375,17 @@
                     <artifactId>quarkus-openshift</artifactId>
                 </dependency>
             </dependencies>
+        </profile>
+        <profile>
+            <id>skip-testcontainers-tests</id>
+            <activation>
+                <property>
+                    <name>skip-testcontainers-tests</name>
+                </property>
+            </activation>
+            <properties>
+                <skipTests>true</skipTests>
+            </properties>
         </profile>
     </profiles>
 
