--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+dependency-reduced-pom.xml
 
 # Eclipse
 .project
@@ -37,3 +38,6 @@ nb-configuration.xml
 
 # Vi/Vim
 *.swp
+
+# Quarkus
+quarkus.log
