Re-enable KafkaIT test

--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -15,8 +15,11 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-#Kafka topic Name
+# Kafka topic Name
 kafka.topic.name=test
+
+# Kafka brokers in native test
+%prod.camel.component.kafka.brokers=${kafka.bootstrap.servers}
 
 # How often should the messages be generated and pushed to Kafka Topic
 timer.period = 10000
