--- a/observability/src/main/resources/application.properties
+++ b/observability/src/main/resources/application.properties
@@ -20,11 +20,11 @@
 #
 quarkus.banner.enabled = false
 
-# Configure Quarkus Jaeger OpenTracing support
-quarkus.jaeger.service-name = greetings-service
-quarkus.jaeger.sampler-type = const
-quarkus.jaeger.sampler-param = 1
-quarkus.jaeger.endpoint = http://localhost:14268/api/traces
+# Identifier for the origin of spans created by the application
+quarkus.application.name=camel-quarkus-observability
+
+# gRPC endpoint for sending spans
+quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317
 
 # Allow metrics to be exported as JSON. Not strictly required and is disabled by default
 quarkus.micrometer.export.json.enabled = true
