Reduce the number of timer-log examples

--- a/timer-log/src/main/resources/application.properties
+++ b/timer-log/src/main/resources/application.properties
@@ -24,3 +24,8 @@ quarkus.log.file.enable = true
 # Camel
 #
 camel.context.name = quarkus-camel-example-timer-log
+
+camel.main.routes-include-pattern= classpath:routes/my-routes.xml
+
+timer.period=1s
+greeting.message=Hello World!
