Fix example for ability to use Jaeger exporter only

--- a/observability/src/main/resources/application.properties
+++ b/observability/src/main/resources/application.properties
@@ -23,8 +23,10 @@ quarkus.banner.enabled = false
 # Identifier for the origin of spans created by the application
 quarkus.application.name=camel-quarkus-observability
 
-# gRPC endpoint for sending spans
+# For OTLP
 quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317
+# For Jaeger
+# quarkus.opentelemetry.tracer.exporter.jaeger.endpoint=http://localhost:14250
 
 # Allow metrics to be exported as JSON. Not strictly required and is disabled by default
 quarkus.micrometer.export.json.enabled = true
