--- a/observability/src/main/resources/application.properties
+++ b/observability/src/main/resources/application.properties
@@ -24,9 +24,9 @@ quarkus.banner.enabled = false
 quarkus.application.name=camel-quarkus-observability
 
 # For OTLP
-quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317
+quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://${TELEMETRY_COLLECTOR_COLLECTOR_SERVICE_HOST:localhost}:4317
 # For Jaeger
-# quarkus.opentelemetry.tracer.exporter.jaeger.endpoint=http://localhost:14250
+# quarkus.opentelemetry.tracer.exporter.jaeger.endpoint=http://${MY_JAEGER_COLLECTOR_SERVICE_HOST:localhost}:14250
 
 # Allow metrics to be exported as JSON. Not strictly required and is disabled by default
 quarkus.micrometer.export.json.enabled = true
@@ -35,3 +35,9 @@ quarkus.micrometer.export.json.enabled = true
 # Camel
 #
 camel.context.name = camel-quarkus-observability
+greeting-app.service.host=${CAMEL_QUARKUS_OBSERVABILITY_SERVICE_HOST:localhost}
+greeting-app.service.port=${CAMEL_QUARKUS_OBSERVABILITY_SERVICE_PORT_HTTP:${quarkus.http.port}}
+%test.greeting-app.service.port=${quarkus.http.test-port}
+greeting-provider-app.service.host=localhost
+greeting-provider-app.service.port=${quarkus.http.port}
+%test.greeting-provider-app.service.port=${quarkus.http.test-port}
