Convert JDBC XML routes to Java DSL

--- a/jdbc-datasource/src/main/resources/application.properties
+++ b/jdbc-datasource/src/main/resources/application.properties
@@ -20,16 +20,13 @@
 quarkus.banner.enabled = false
 quarkus.log.file.enable = true
 
-camel.main.routes-include-pattern = file:src/main/resources/routes/camel-routes.xml
-
-
-#Default datastore
+#Default DataSource
 quarkus.datasource.camel-ds.db-kind=h2
 
-#If you want to have more than one datastore, you can use an identifier as this:
+#If you want to have more than one DataSource, you can use an identifier as this:
 #quarkus.datasource.$identifier.db-kind=h2
 #Then use it on the route by name
-#<to uri="jdbc:$identifier"/>
+#.to("jdbc:$identifier")
 
 #Configure the following section to use a maven profile (called prod)
 #configured database (using postgresql on this case)
