--- a/jta-jpa/pom.xml
+++ b/jta-jpa/pom.xml
@@ -25,7 +25,7 @@
     <name>Camel Quarkus :: Examples :: JTA JPA</name>
     <description>Camel Quarkus Example :: JTA JPA</description>
     <properties>
-        <quarkus.platform.version>2.12.0.Final</quarkus.platform.version>
+        <quarkus.platform.version>2.13.0.CR1</quarkus.platform.version>
         <camel-quarkus.platform.version>2.13.0-SNAPSHOT</camel-quarkus.platform.version>
         <quarkus-artemis.version>1.2.0</quarkus-artemis.version>
         <quarkus-pooled-jms.version>1.0.1</quarkus-pooled-jms.version>
