Update jta-jpa to support transaction crash and recovery

--- a/jta-jpa/src/main/resources/application.properties
+++ b/jta-jpa/src/main/resources/application.properties
@@ -34,13 +34,7 @@ quarkus.datasource.jdbc.transactions=xa
 
 # Hibernate ORM
 quarkus.hibernate-orm.database.generation=drop-and-create
-
-# Quarkus Artemis and Messaginghub Pooled JMS
-%test.quarkus.artemis.devservices.enabled=false
-#%prod.quarkus.artemis.url=tcp://localhost:61616
-#%prod.quarkus.artemis.username=admin
-#%prod.quarkus.artemis.password=admin
-quarkus.pooled-jms.xa.enabled=true
+#%prod.quarkus.hibernate-orm.database.generation=none
 
 # Quarkus Narayana JTA
 quarkus.transaction-manager.object-store-directory=target/narayana
