--- a/cluster-leader-election/src/main/resources/application.properties
+++ b/cluster-leader-election/src/main/resources/application.properties
@@ -38,6 +38,11 @@ quarkus.kubernetes.replicas=2
 quarkus.kubernetes-client.generate-rbac=false
 quarkus.kubernetes.service-account=camel-leader-election
 
+#
+# OpenShift
+#
+quarkus.openshift.service-account=camel-leader-election
+
 # Uncomment after https://github.com/apache/camel-quarkus/issues/3918 is solved
 #camel.cluster.file.enabled = true
 #camel.cluster.file.id = ${node.id}
