Fix jta-jpa example to enable transaction recovery explicitly

--- a/jta-jpa/src/main/resources/application.properties
+++ b/jta-jpa/src/main/resources/application.properties
@@ -38,6 +38,7 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 
 # Quarkus Narayana JTA
 quarkus.transaction-manager.object-store-directory=target/narayana
+quarkus.transaction-manager.enable-recovery=true
 
 # Camel
 camel.rest.context-path=/api
