--- a/kamelet-chucknorris/src/main/resources/kamelets/chuck-norris-source.kamelet.yaml
+++ b/kamelet-chucknorris/src/main/resources/kamelets/chuck-norris-source.kamelet.yaml
@@ -53,7 +53,7 @@ spec:
       parameters:
         period: "{{period}}"
       steps:
-        - to: "http://api.icndb.com/jokes/random"
+        - to: "https://api.chucknorris.io/jokes/random?category=dev"
         - set-body:
-            jsonpath: "$.value.joke"
+            jsonpath: "$.value"
         - to: "kamelet:sink"
