Fix with some comments

--- a/jms-jpa/src/main/resources/application.properties
+++ b/jms-jpa/src/main/resources/application.properties
@@ -45,7 +45,7 @@ camel.rest.context-path=/api
 
 # Quarkus Artemis
 quarkus.artemis.enabled=true
-quarkus.artemis.devservices.enabled=false
+%test.quarkus.artemis.devservices.enabled=false
 #%prod.quarkus.artemis.url=tcp://localhost:61616
 #%prod.quarkus.artemis.username=admin
 #%prod.quarkus.artemis.password=admin
