--- a/observability/src/main/resources/application.properties
+++ b/observability/src/main/resources/application.properties
@@ -19,25 +19,23 @@
 # Quarkus
 #
 quarkus.banner.enabled = false
+quarkus.management.enabled = true
 
 # Identifier for the origin of spans created by the application
-quarkus.application.name=camel-quarkus-observability
+quarkus.application.name = camel-quarkus-observability
 
 # For OTLP
-quarkus.otel.exporter.otlp.traces.endpoint=http://${TELEMETRY_COLLECTOR_COLLECTOR_SERVICE_HOST:localhost}:4317
+quarkus.otel.exporter.otlp.traces.endpoint = http://${TELEMETRY_COLLECTOR_COLLECTOR_SERVICE_HOST:localhost}:4317
 # For Jaeger
-# quarkus.otel.exporter.jaeger.traces.endpoint=http://${MY_JAEGER_COLLECTOR_SERVICE_HOST:localhost}:14250
-
-# Allow metrics to be exported as JSON. Not strictly required and is disabled by default
-quarkus.micrometer.export.json.enabled = true
+# quarkus.otel.exporter.jaeger.traces.endpoint = http://${MY_JAEGER_COLLECTOR_SERVICE_HOST:localhost}:14250
 
 #
 # Camel
 #
 camel.context.name = camel-quarkus-observability
-greeting-app.service.host=${CAMEL_QUARKUS_OBSERVABILITY_SERVICE_HOST:localhost}
-greeting-app.service.port=${CAMEL_QUARKUS_OBSERVABILITY_SERVICE_PORT_HTTP:${quarkus.http.port}}
-%test.greeting-app.service.port=${quarkus.http.test-port}
-greeting-provider-app.service.host=localhost
-greeting-provider-app.service.port=${quarkus.http.port}
-%test.greeting-provider-app.service.port=${quarkus.http.test-port}
+greeting-app.service.host = ${CAMEL_QUARKUS_OBSERVABILITY_SERVICE_HOST:localhost}
+greeting-app.service.port = ${CAMEL_QUARKUS_OBSERVABILITY_SERVICE_PORT_HTTP:${quarkus.http.port}}
+%test.greeting-app.service.port = ${quarkus.http.test-port}
+greeting-provider-app.service.host = localhost
+greeting-provider-app.service.port = ${quarkus.http.port}
+%test.greeting-provider-app.service.port = ${quarkus.http.test-port}
