--- a/message-bridge/src/main/resources/application.properties
+++ b/message-bridge/src/main/resources/application.properties
@@ -17,6 +17,7 @@
 quarkus.log.file.enable=true
 
 ibm.mq.host=localhost
+%kubernetes.ibm.mq.host=${MQ_SERVICE_HOST}
 %openshift.ibm.mq.host=mq
 ibm.mq.port=1414
 ibm.mq.channel=DEV.APP.SVRCONN
@@ -26,6 +27,7 @@ ibm.mq.password=passw0rd
 ibm.mq.queue=DEV.QUEUE.1
 
 quarkus.artemis.amqConnectionFactory.url=tcp://localhost:61616
+%kubernetes.quarkus.artemis.amqConnectionFactory.url=tcp://${ACTIVEMQ_SERVICE_HOST}:61616
 %openshift.quarkus.artemis.amqConnectionFactory.url=tcp://activemq-artemis-broker:61616
 quarkus.artemis.amqConnectionFactory.username=admin
 quarkus.artemis.amqConnectionFactory.password=admin
@@ -37,6 +39,8 @@ quarkus.pooled-jms.max-connections=8
 
 quarkus.transaction-manager.object-store.directory=target/narayana
 %openshift.quarkus.transaction-manager.object-store.directory=/storage/narayana
+%kubernetes.quarkus.transaction-manager.object-store.directory=/storage/narayana
 dummy.resource.directory=target/DummyXAResource
 %openshift.dummy.resource.directory=/storage/DummyXAResource
+%kubernetes.dummy.resource.directory=/storage/DummyXAResource
 quarkus.transaction-manager.enable-recovery=true
