Disable cluster-leader-election native build on GitHub CI

--- a/cluster-leader-election/pom.xml
+++ b/cluster-leader-election/pom.xml
@@ -257,7 +257,6 @@
     </build>
 
     <profiles>
-        <!-- TODO: https://github.com/apache/camel-quarkus/issues/5447
         <profile>
             <id>native</id>
             <activation>
@@ -290,7 +289,20 @@
                 </plugins>
             </build>
         </profile>
-        -->
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/5515 -->
+        <profile>
+            <id>native-disabled-github-ci</id>
+            <activation>
+                <property>
+                    <name>env.CI</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <properties>
+                <quarkus.package.type>fast-jar</quarkus.package.type>
+                <skipITs>true</skipITs>
+            </properties>
+        </profile>
         <profile>
             <id>kubernetes</id>
             <activation>
