Add multiple datasources to Jdbc example

--- a/jdbc-datasource/src/main/resources/application.properties
+++ b/jdbc-datasource/src/main/resources/application.properties
@@ -20,20 +20,18 @@
 quarkus.banner.enabled = false
 quarkus.log.file.enable = true
 
-#Default DataSource
-quarkus.datasource.camel-ds.db-kind=h2
+# Set how many time the route should be applied
+etl.timer.repeatcount = 0
+%test.etl.timer.repeatCount = 1
 
-#If you want to have more than one DataSource, you can use an identifier as this:
-#quarkus.datasource.$identifier.db-kind=h2
-#Then use it on the route by name
-#.to("jdbc:$identifier")
+# Source Database Configuration
+quarkus.datasource.source_db.db-kind = postgresql
+quarkus.datasource.source_db.jdbc.url = jdbc:postgresql://localhost:5432/source_db
+quarkus.datasource.source_db.username = ETL_source_user
+quarkus.datasource.source_db.password = 1234567@8_source
 
-#Configure the following section to use a maven profile (called prod)
-#configured database (using postgresql on this case)
-#Remember to edit the pom.xml to add the database driver needed
-#<artifactId>quarkus-jdbc-postgresql on this case</artifactId>
-#%prod.quarkus.datasource.db-kind=postgresql
-#%prod.quarkus.datasource.username=${POSTGRESQL_USER}
-#%prod.quarkus.datasource.password=${POSTGRESQL_PASSWORD}
-#%prod.quarkus.datasource.jdbc.url=${POSTGRESQL_JDBC_URL}
-#%prod.quarkus.datasource.jdbc.max-size=16
+# Target Database Configuration
+quarkus.datasource.target_db.db-kind = postgresql
+quarkus.datasource.target_db.jdbc.url = jdbc:postgresql://localhost:5433/target_db
+quarkus.datasource.target_db.username = ETL_target_user
+quarkus.datasource.target_db.password = 1234567@8_target
